--- a/Web/Python/Testing/CMakeLists.txt
+++ b/Web/Python/Testing/CMakeLists.txt
@@ -2,6 +2,6 @@
 add_test(NAME pvweb-StartTest
   COMMAND
     "$<TARGET_FILE:ParaView::pvpython>"
-    -m paraview.web.test_server
+    "${CMAKE_BINARY_DIR}/${PARAVIEW_PYTHON_SITE_PACKAGES_SUFFIX}/paraview/web/test_server.py"
     --port 9739
     --timeout 1)
