halo tests are no designed to run in parallel.
halo finder tests are incorrect for parallel runs. for now, running them
on single rank.

ref: paraview/paraview#18813

--- a/ParaViewCore/VTKExtensions/CosmoTools/Testing/Cxx/CMakeLists.txt
+++ b/ParaViewCore/VTKExtensions/CosmoTools/Testing/Cxx/CMakeLists.txt
@@ -1,3 +1,8 @@
+# FIXME: these tests are not designed for parallel MPI runs!
+# we need to fix them before we can run them on more than 1 rank.
+# see paraview/paraview#18813
+set (vtkPVVTKExtensionsCosmoToolsCxxTests_NUMPROCS 1)
+
 vtk_add_test_mpi(vtkPVVTKExtensionsCosmoToolsCxxTests tests
   TESTING_DATA
   TestHaloFinder.cxx # test of particles output
