--- a/CMake/paraview_client_launcher.c.in
+++ b/CMake/paraview_client_launcher.c.in
@@ -13,11 +13,11 @@ PURPOSE.  See the above copyright notice for more information.
 
 =========================================================================*/
 
-#define vtksys_SHARED_FORWARD_DIR_BUILD "@_paraview_client_build_dir@"
-#define vtksys_SHARED_FORWARD_PATH_BUILD @_paraview_client_build_path@
-#define vtksys_SHARED_FORWARD_PATH_INSTALL @_paraview_client_install_path@
-#define vtksys_SHARED_FORWARD_EXE_BUILD "@_paraview_client_build_dir@/@_paraview_client_NAME@"
-#define vtksys_SHARED_FORWARD_EXE_INSTALL "@_paraview_client_install_dir@/@_paraview_client_NAME@"
+#define vtksys_SHARED_FORWARD_DIR_BUILD "@_paraview_launcher_build_dir@"
+#define vtksys_SHARED_FORWARD_PATH_BUILD @_paraview_launcher_build_path@
+#define vtksys_SHARED_FORWARD_PATH_INSTALL @_paraview_launcher_install_path@
+#define vtksys_SHARED_FORWARD_EXE_BUILD "@_paraview_launcher_build_dir@/@_paraview_launcher_NAME@"
+#define vtksys_SHARED_FORWARD_EXE_INSTALL "@_paraview_launcher_install_dir@/@_paraview_launcher_NAME@"
 #define vtksys_SHARED_FORWARD_OPTION_PRINT "--print"
 #define vtksys_SHARED_FORWARD_OPTION_LDD "--ldd"
 
