--- a/Plugins/AnalyzeNIfTIReaderWriter/Testing/CMakeLists.txt
+++ b/Plugins/AnalyzeNIfTIReaderWriter/Testing/CMakeLists.txt
@@ -1,7 +1,13 @@
 set(module_tests
-  AnalyzeReaderWriterPlugin.xml)
+  AnalyzeReaderWriterPlugin.xml
+  NiftiReaderWriterPlugin.xml)
 
 if (PARAVIEW_BUILD_QT_GUI AND BUILD_SHARED_LIBS)
+  set(_paraview_add_tests_default_test_data_target ParaViewData)
+  ExternalData_Expand_Arguments(ParaViewData _
+    "DATA{${CMAKE_CURRENT_SOURCE_DIR}/Data/ANALYZE/,REGEX:.*}"
+    "DATA{${CMAKE_CURRENT_SOURCE_DIR}/Data/minimal.nii}")
+
   paraview_add_client_tests(
     LOAD_PLUGIN   "AnalyzeNIfTIIO"
     BASELINE_DIR  ${PARAVIEW_TEST_BASELINE_DIR}
