only use major.minor.patch as version for Qt `applicationVersion`
This ensures that the settings file doesn't end up using git SHA.
Fixes #18797.

--- a/Applications/ParaView/CMakeLists.txt
+++ b/Applications/ParaView/CMakeLists.txt
@@ -44,7 +44,7 @@ paraview_client_add(
   APPLICATION_NAME  "ParaView"
   TITLE             "ParaView ${paraview_version}"
   ORGANIZATION      "ParaView"
-  VERSION           "${PARAVIEW_VERSION_FULL}"
+  VERSION           "${PARAVIEW_VERSION_MAJOR}.${PARAVIEW_VERSION_MINOR}.${PARAVIEW_VERSION_PATCH}"
   MAIN_WINDOW_CLASS "ParaViewMainWindow"
   BUNDLE_ICON       "${CMAKE_CURRENT_SOURCE_DIR}/pvIcon.icns"
   APPLICATION_ICON  "${CMAKE_CURRENT_SOURCE_DIR}/pvIcon.ico"
