--- a/Examples/Catalyst/CxxMappedDataArrayExample/CMakeLists.txt
+++ b/Examples/Catalyst/CxxMappedDataArrayExample/CMakeLists.txt
@@ -7,6 +7,7 @@ if (USE_CATALYST)
   target_link_libraries(CxxMappedDataArrayExampleAdaptor
     PRIVATE
       ParaView::PythonCatalyst
+      VTK::CommonDataModel
       VTK::ParallelMPI)
 endif ()
 
