--- a/Examples/Catalyst/CxxOverlappingAMRExample/CMakeLists.txt
+++ b/Examples/Catalyst/CxxOverlappingAMRExample/CMakeLists.txt
@@ -9,7 +9,9 @@ add_library(CxxOverlappingAMRExampleAdaptor
   FEAdaptor.h)
 target_link_libraries(CxxOverlappingAMRExampleAdaptor
   PRIVATE
-    ParaView::PythonCatalyst)
+    ParaView::PythonCatalyst
+    VTK::CommonDataModel
+    VTK::ParallelCore)
 
 add_executable(CxxOverlappingAMRExample
   FEDriver.cxx)
