--- a/Examples/Catalyst/CxxMultiChannelInputExample/CMakeLists.txt
+++ b/Examples/Catalyst/CxxMultiChannelInputExample/CMakeLists.txt
@@ -5,6 +5,7 @@ if (USE_CATALYST)
   target_link_libraries(CxxMultiChannelInputExampleAdaptor
     PRIVATE
       ParaView::PythonCatalyst
+      VTK::CommonDataModel
       VTK::ParallelMPI)
 endif ()
 
