--- a/Examples/Catalyst/CxxParticlePathExample/CMakeLists.txt
+++ b/Examples/Catalyst/CxxParticlePathExample/CMakeLists.txt
@@ -5,6 +5,7 @@ if (USE_CATALYST)
   target_link_libraries(CxxParticlePathExampleAdaptor
     PRIVATE
       ParaView::PythonCatalyst
+      VTK::CommonDataModel
       VTK::ParallelMPI)
 endif ()
 
