AnalyzeNIfTIReaderWriter: change name to match dir.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -584,7 +584,7 @@ set_property(GLOBAL
 
 set(paraview_default_plugins
   AcceleratedAlgorithms
-  AnalyzeNIfTIIO
+  AnalyzeNIfTIReaderWriter
   ArrowGlyph
   BagPlotViewsAndFilters
   CDIReader
