cmake: hide BUILD_TESTING option
The PARAVIEW_BUILD_TESTING option is the user-visible control for this
variable.

See: vtk/vtk#17527

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,9 @@ include(ParaViewClient)
 include(ParaViewPlugin)
 include(vtkModuleWrapClientServer)
 include(CTest)
+set_property(CACHE BUILD_TESTING
+  PROPERTY
+    TYPE INTERNAL)
 
 include(vtkCompilerChecks)
 include(vtkCompilerPlatformFlags)
