refactor multi-view layouting
Instead of creating a hierarchy of QSplitter to support ParaView's
hierarchical view layout, we now use a new layout subclass,
pqHierarchicalGridLayout. Together with pqHierarchicalGridWidget
pqHierarchicalGridLayout support interactive resizing.

--- a/Qt/Components/CMakeLists.txt
+++ b/Qt/Components/CMakeLists.txt
@@ -157,7 +157,6 @@ set(classes
   pqSignalAdaptorKeyFrameType
   pqSignalAdaptorSelectionTreeWidget
   pqSignalAdaptorTreeWidget
-  pqSplitter
   pqStringVectorPropertyWidget
   pqSubsetInclusionLatticeTreeModel
   pqSubsetInclusionLatticeWidget
@@ -215,6 +214,7 @@ set(ui_files
   Resources/UI/pqOrbitCreatorDialog.ui
   Resources/UI/pqPipelineTimeKeyFrameEditor.ui
   Resources/UI/pqPluginDialog.ui
+  Resources/UI/pqPopoutPlaceholder.ui
   Resources/UI/pqPresetDialog.ui
   Resources/UI/pqPropertiesPanel.ui
   Resources/UI/pqProxyInformationWidget.ui
