Rename TestDataGridAxes -> DataAxesGrid
The name better reflects the name of the feature being tested.

--- a/Applications/ParaView/Testing/XML/CMakeLists.txt
+++ b/Applications/ParaView/Testing/XML/CMakeLists.txt
@@ -498,8 +498,8 @@ if(NOT APPLE)
 endif()
 
 SET(TESTS_WITH_BASELINES
+  DataAxesGrid.xml
   MoleculeScalarBar.xml
-  TestDataGridAxes.xml
   TestHiddenLineRemoval.xml
   TestOpacityRendering.xml
 )
