VRPlugin: use `PRIVATE` rather than `LINK_PRIVATE`

--- a/Plugins/VRPlugin/CMakeLists.txt
+++ b/Plugins/VRPlugin/CMakeLists.txt
@@ -107,8 +107,8 @@ paraview_add_plugin(VRPlugin
   UI_FILES ${ui_files}
   SOURCES ${sources})
 
-target_link_libraries (VRPlugin
-  LINK_PRIVATE
+target_link_libraries(VRPlugin
+  PRIVATE
     ParaView::ClientServerCoreCore
     ParaView::Core
     ParaView::ServerManagerCore
