VRPlugin: include the binary directory

--- a/Plugins/VRPlugin/CMakeLists.txt
+++ b/Plugins/VRPlugin/CMakeLists.txt
@@ -107,6 +107,10 @@ paraview_add_plugin(VRPlugin
   UI_FILES ${ui_files}
   SOURCES ${sources})
 
+target_include_directories(VRPlugin
+  PRIVATE
+    "${CMAKE_CURRENT_BINARY_DIR}")
+
 target_link_libraries(VRPlugin
   PRIVATE
     ParaView::ClientServerCoreCore
