--- a/Plugins/GMVReader/Testing/CMakeLists.txt
+++ b/Plugins/GMVReader/Testing/CMakeLists.txt
@@ -9,6 +9,13 @@ set(GMV_READER_TESTS
 )
 
 if (PARAVIEW_BUILD_QT_GUI)
+  set(_paraview_add_tests_default_test_data_target ParaViewData)
+  ExternalData_Expand_Arguments(ParaViewData _
+    "DATA{${CMAKE_CURRENT_SOURCE_DIR}/Data/GMV/,REGEX:.*}"
+    "DATA{${CMAKE_CURRENT_SOURCE_DIR}/Data/GMV/invalid/,REGEX:.*}"
+    "DATA{${CMAKE_CURRENT_SOURCE_DIR}/Data/GMV/partial-pyramid/,REGEX:.*}"
+    "DATA{${CMAKE_CURRENT_SOURCE_DIR}/Data/GMV/quadratic_cells/,REGEX:.*}")
+
   paraview_add_client_tests(
     BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
     TEST_SCRIPTS ${GMV_READER_TESTS}
