GenerateIds: support separate point/cell array names
`GenerateIds` filter now supports separate names for point/cell arrays
along with ability to turn then on/off individually.

--- a/ParaViewCore/ServerManager/Default/Testing/Python/CMakeLists.txt
+++ b/ParaViewCore/ServerManager/Default/Testing/Python/CMakeLists.txt
@@ -10,6 +10,7 @@ set(PY_TESTS
   ChangeTimeSteps.py
   ColorAttributeTypeBackwardsCompatibility.py,NO_VALID
   CSVWriterReader.py,NO_VALID
+  GenerateIdScalarsBackwardsCompatibility.py,NO_VALID
   GhostCellsInMergeBlocks.py
   IntegrateAttributes.py,NO_VALID
   LookupTable.py,NO_VALID
