Allow paraview to work with "Open With"

--- a/Applications/ParaView/org.paraview.ParaView.desktop.in
+++ b/Applications/ParaView/org.paraview.ParaView.desktop.in
@@ -3,6 +3,6 @@ Version=1.0
 Type=Application
 Name=ParaView
 Comment=Parallel visualization application
-Exec=paraview
+Exec=paraview %f
 TryExec=paraview
 Icon=paraview
