move python views to separate xml.
Addresses errors about not being able to create PythonView prototype
in non-python builds.

--- a/ParaViewCore/ServerManager/SMApplication/CMakeLists.txt
+++ b/ParaViewCore/ServerManager/SMApplication/CMakeLists.txt
@@ -116,7 +116,8 @@ endif ()
 
 if (TARGET VTK::PythonInterpreter)
   list(APPEND xml_files
-    Resources/pythonfilter.xml)
+    Resources/pythonfilter.xml
+    Resources/pythonviews.xml)
 endif ()
 
 paraview_add_server_manager_xmls(
