Adding a XML test

--- a/Applications/ParaView/Testing/XML/CMakeLists.txt
+++ b/Applications/ParaView/Testing/XML/CMakeLists.txt
@@ -398,6 +398,7 @@ SET (TESTS_WITHOUT_BASELINES
   FavoritesFilters.xml
   CustomOutputFormat.xml
   DelimitedTextReader.xml
+  DynamicFieldDataDomain.xml
   ExportFilteredColumnsSpreadsheet.xml
   FindWidget.xml
   ModifyGUIWindowTitle.xml
