paraview-config: install the script
Fixes: #17881

--- a/CommandLineExecutables/CMakeLists.txt
+++ b/CommandLineExecutables/CMakeLists.txt
@@ -47,3 +47,12 @@ if (PARAVIEW_ENABLE_PYTHON)
         VTK::PythonInterpreter)
   endforeach ()
 endif ()
+
+configure_file(
+  "${CMAKE_CURRENT_SOURCE_DIR}/paraview-config"
+  "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/paraview-config"
+  COPYONLY)
+install(
+  PROGRAMS    "${CMAKE_CURRENT_SOURCE_DIR}/paraview-config"
+  DESTINATION "${CMAKE_INSTALL_BINDIR}"
+  COMPONENT   development)
