cmake: set VTK_SOURCE_DIR for testing VTK
This is required because the path to `rtImageTest.py` requires it.
There's a TODO item in VTK to fix this.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -701,6 +701,9 @@ else ()
   set(vtk_enable_tests "OFF")
   if (PARAVIEW_BUILD_VTK_TESTING)
     set(vtk_enable_tests "${PARAVIEW_BUILD_TESTING}")
+    # Needed for `rtImageTest.py` tests to work. See note in `vtkModuleTesting`
+    # about this.
+    set(VTK_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/VTK")
   endif ()
 
   # Forward Python option to VTK.
