Append Datasets and Merge Blocks: add tests for output type
Test that the output type is vtkPolyData if all inputs to "Append
Datasets" are vtkPolyData and vtkUnstructuredGrid otherwise. Test the
same and if all leaf blocks in composite dataset input to "Merge
Blocks" are vtkPolyData and vtkUnstructuredGrid otherwise.

--- a/Applications/ParaView/Testing/Python/CMakeLists.txt
+++ b/Applications/ParaView/Testing/Python/CMakeLists.txt
@@ -70,8 +70,10 @@ paraview_add_test_python(
 
 paraview_add_test_python(
   NO_DATA NO_VALID NO_OUTPUT NO_RT
-  TestResetProperty.py
+  AppendDatasetsPolyData.py
+  MergeBlocksPolyData.py
   PointPicking.py
+  TestResetProperty.py
 )
 
 paraview_add_test_python(
