plugins: use simplified plugin with module API

--- a/Plugins/NonOrthogonalSource/CMakeLists.txt
+++ b/Plugins/NonOrthogonalSource/CMakeLists.txt
@@ -1,27 +1,3 @@
-vtk_module_scan(
-  MODULE_FILES      "${CMAKE_CURRENT_SOURCE_DIR}/Sources/vtk.module"
-  REQUEST_MODULES   NonOrthogonalSource::vtkNonOrthogonalSources
-  PROVIDES_MODULES  sources_modules
-  REQUIRES_MODULES  required_modules
-  HIDE_MODULES_FROM_CACHE ON)
-
-if (required_modules)
-  foreach (required_module IN LISTS required_modules)
-    if (NOT TARGET "${required_module}")
-      message(FATAL_ERROR
-        "Failed to find the required module ${required_module}.")
-    endif ()
-  endforeach ()
-endif ()
-
-vtk_module_build(
-  MODULES             ${sources_modules}
-  PACKAGE             NonOrthogonalSource
-  INSTALL_HEADERS     OFF
-  LIBRARY_NAME_SUFFIX "pv${PARAVIEW_VERSION_MAJOR}.${PARAVIEW_VERSION_MINOR}"
-  VERSION             "${PARAVIEW_VERSION}"
-  SOVERSION           "1")
-
 set(interfaces)
 set(sources)
 if (PARAVIEW_BUILD_QT_GUI)
@@ -44,7 +20,8 @@ paraview_add_plugin(NonOrthogonalSource
   VERSION       "1.0"
   UI_INTERFACES ${interfaces}
   SOURCES       ${sources}
-  MODULES       NonOrthogonalSource::vtkNonOrthogonalSources)
+  MODULES       NonOrthogonalSource::vtkNonOrthogonalSources
+  MODULE_FILES  "${CMAKE_CURRENT_SOURCE_DIR}/Sources/vtk.module")
 
 if (PARAVIEW_BUILD_QT_GUI)
   target_link_libraries(NonOrthogonalSource
