--- a/Plugins/CDIReader/CMakeLists.txt
+++ b/Plugins/CDIReader/CMakeLists.txt
@@ -1,28 +1,5 @@
-vtk_module_scan(
-  MODULE_FILES      "${CMAKE_CURRENT_SOURCE_DIR}/Reader/vtk.module"
-  REQUEST_MODULES   CDIReader::vtkCDIReader
-  PROVIDES_MODULES  cdi_modules
-  REQUIRES_MODULES  required_modules
-  HIDE_MODULES_FROM_CACHE ON)
-
-if (required_modules)
-  foreach (required_module IN LISTS required_modules)
-    if (NOT TARGET "${required_module}")
-      message(FATAL_ERROR
-        "Failed to find the required module ${required_module}.")
-    endif ()
-  endforeach ()
-endif ()
-
-vtk_module_build(
-  MODULES             ${cdi_modules}
-  PACKAGE             CDIReader
-  INSTALL_HEADERS     OFF
-  LIBRARY_NAME_SUFFIX "pv${PARAVIEW_VERSION_MAJOR}.${PARAVIEW_VERSION_MINOR}"
-  VERSION             "${PARAVIEW_VERSION}"
-  SOVERSION           "1")
-
 paraview_add_plugin(CDIReader
   REQUIRED_ON_SERVER
   VERSION "1.3"
-  MODULES CDIReader::vtkCDIReader)
+  MODULES CDIReader::vtkCDIReader
+  MODULE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Reader/vtk.module")
